--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,7 +37,7 @@ services:
       - 'KONG_PROXY_ERROR_LOG=/dev/stderr'
       - 'KONG_ADMIN_ERROR_LOG=/dev/stderr'
       - 'KONG_ADMIN_LISTEN=0.0.0.0:8001, 0.0.0.0:8444 ssl'
-      - 'KONG_PLUGINS=oidc'
+      - 'KONG_PLUGINS=oidc,cors'
     ports:
       - '8000:8000'
       - '8443:8443'
